[gd_scene load_steps=10 format=3 uid="uid://b1ofjgpbhuept"]

[ext_resource type="Script" uid="uid://6nujy43eyw4l" path="res://Scripts/Plant.gd" id="1_mwla5"]
[ext_resource type="ArrayMesh" uid="uid://petmhcdrojwj" path="res://Assets/Gardenings/SeedSingle.obj" id="2_pcymq"]
[ext_resource type="ArrayMesh" uid="uid://d1dqkhlhfsm7h" path="res://Assets/Flowers/Stem.obj" id="3_pcymq"]
[ext_resource type="ArrayMesh" uid="uid://clv07b6q5as88" path="res://Assets/Flowers/RedFlower.obj" id="3_rs4jc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_glafq"]
albedo_color = Color(0.536184, 0.39601275, 0.16048452, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ajoep"]
albedo_color = Color(0, 0.36743286, 0.6574027, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rs4jc"]
albedo_color = Color(0, 0.48228574, 0.15578336, 1)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_7xpxm"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nffhs"]
height = 0.8110657
radius = 0.16455078

[node name="PlantTemplate" type="Node3D"]
script = ExtResource("1_mwla5")
RHYTHM = 6

[node name="SeedModel" type="Node3D" parent="."]

[node name="Seed" type="MeshInstance3D" parent="SeedModel"]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0.07196027, 0, -0.8317816)
mesh = ExtResource("2_pcymq")
surface_material_override/0 = SubResource("StandardMaterial3D_glafq")

[node name="PlantModel" type="Node3D" parent="."]

[node name="Flower" type="MeshInstance3D" parent="PlantModel"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0.8215695, 0)
mesh = ExtResource("3_rs4jc")
surface_material_override/0 = SubResource("StandardMaterial3D_ajoep")

[node name="Stem" type="MeshInstance3D" parent="PlantModel"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.034105062, 0, 0)
mesh = ExtResource("3_pcymq")
surface_material_override/0 = SubResource("StandardMaterial3D_rs4jc")

[node name="GrowTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="PlantCollision" type="StaticBody3D" parent="."]
disable_mode = 1
collision_layer = 2
collision_mask = 2
physics_material_override = SubResource("PhysicsMaterial_7xpxm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlantCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4049225, 0)
shape = SubResource("CylinderShape3D_nffhs")

[connection signal="timeout" from="GrowTimer" to="." method="_on_growth_timer_timeout"]
